changes in argorithm-run status setting;  fixing django GUI related errors; added some comments

--- a/Stemweb/templates/base.html
+++ b/Stemweb/templates/base.html
@@ -9,7 +9,7 @@
     	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/stemweb.css" />
     	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/algorithms.css" />
-    	
+    	<link rel="shortcut icon" href="#" />
 		<!-- 
 			Let google handle jQuery source's for faster page viewing. 
 			Later it should be tested that this host is reachable and  
@@ -82,7 +82,7 @@
 		
 				{# placeholder #}
 				{# (logo) STEMWEB - stemmatology online #}
-				<img src="{{ MEDIA_URL }}img/stemweb-logo-beta.png" />
+				<img src="{{ MEDIA_URL }}img/stemweb-logo-beta.jpg" />
 	
 			{% endblock %}
 			</div>
